fix content cut off in small screen

--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -80,3 +80,7 @@
   display: flex;
   flex-direction: column;
 }
+
+.w-full {
+  width: 100%;
+}
